# Person-Of-Interest

./: .env.example  .gitignore  .pre-commit-config.yaml  ARCHITECTURE.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml  setup.sh
.github/workflows/: ci.yml
configs/: clip_baseline.yaml  default.yaml  offline_demo.yaml  siglip2_large.yaml
docs/screenshots/: README.md
evals/: results.md  results_offline_demo.json
notebooks/: 01_embedding_geometry.ipynb  02_retrieval_failure_modes.ipynb  03_evaluation.ipynb
scripts/: build_index.py  download_data.py  evaluate.py  generate_figures.py  generate_synthetic_data.py  render_demo_assets.py
slurm/: README.md  ablation.sbatch  build_index.sbatch  evaluate.sbatch  serve.sbatch
src/poi/: __init__.py
src/poi/data/: __init__.py  celeba.py
src/poi/embeddings/: __init__.py  base.py  clip.py  deepface_baseline.py  factory.py  hash_encoder.py  siglip.py
src/poi/index/: __init__.py  faiss_index.py
src/poi/retrieval/: __init__.py  pipeline.py
src/poi/ui/: __init__.py  app.py
src/poi/utils/: __init__.py  config.py  device.py  logging.py
src/poi/vlm/: __init__.py  qwen_vl.py
src/poi/vlm/prompts/: explain_match.txt
tests/: conftest.py  test_config.py  test_device.py  test_hash_encoder.py  test_index.py  test_query_synthesis.py  test_retrieval.py
